Fix touch-based rotation and zoom on Wacom tablets.

Turns out the TouchPoints in a QTouchEvent are not always trustworthy,
and we need to filter out situations where we can tell they are not
reporting the correct coordinates.

BUG:421295
(cherry picked from commit 2302229958c0b629def1bb37b3b15a09c4568962)