libs/ui/canvas/kis_tool_proxy.cpp
@@ -111,7 +111,8 @@ void KisToolProxy::forwardHoverEvent(QEvent *event)
     }
 
     default: {
-        qWarning() << "forwardHoverEvent encountered unknown event type.";
+        qWarning() << "forwardHoverEvent encountered unknown event type:"
+            << event->type();
         return;
     }
     }
